[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "klogs-pgw"
version = "1.0.0"
description = "Klogs Payment Gateway Python client package"
readme = "README.md"
authors = [
    {name = "Klogs", email = "info@klogs.io"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
keywords = ["klogs", "payment", "gateway", "api", "client", "credit-card"]
dependencies = [
    "requests>=2.31.0",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/klogs-hub/paymentgateway-python"
Documentation = "https://github.com/klogs-hub/paymentgateway-python"
Repository = "https://github.com/klogs-hub/paymentgateway-python"
"Bug Tracker" = "https://github.com/klogs-hub/paymentgateway-python/issues"
